--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,6 +7,14 @@
   </head>
   <body>
     <h1>Welcome to Address Book</h1>
+    @if (@Model.Count == 0)
+    {
+      <h3>No contacts in your AddressBook yet!</h3>
+    }
+    @foreach (var contact in Model)
+    {
+      <h3><a href="/contacts/@contact.GetId()">@contact.GetName()</a></h3>
+    }
 
     <p><a href="/contacts/new">Add a new Contact</a></p>
   </body>
