expand the Contact class to include 2 new properties: Phone and Address, which can be entered on the CreateForm.

--- a/Views/Contacts/CreateForm.cshtml
+++ b/Views/Contacts/CreateForm.cshtml
@@ -2,6 +2,13 @@
 <form action="/contacts" method="post">
   <label for="contactName">Name: </label>
   <input id="contactName" name="contactName" type="text">
-  <button type="submit">Add</button>
+
+  <label for="contactPhone">Phone Number: </label>
+  <input id="contactPhone" name="contactPhone" type="text">
+
+  <label for="contactAddress">Address: </label>
+  <input id="contactAddress" name="contactAddress" type="text">
+
+  <button type="submit">Add New Contact</button>
 </form>
 <p><a href="/">Back to All Contacts</a></p>
