--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <h1>Welcome to Address Book</h1>
     @if (@Model.Count == 0)
     {
-      <h3>No contacts in your AddressBook yet!</h3>
+      <h3>No <a href="/contacts/new">contacts</a> in your AddressBook yet!</h3>
     }
     @foreach (var contact in Model)
     {
