--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,5 +17,11 @@
     }
 
     <p><a href="/contacts/new">Add a new Contact</a></p>
+    @if (@Model.Count > 0)
+    {
+      <form action="/contacts/List/Clear" method="post">
+        <button type="submt" name="button">Clear All Contacts</button>
+      </form>
+    }
   </body>
 </html>
