--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,27 +1,46 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Addressing your Addressing needs!</title>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Welcome to Address Book</h1>
+@{
+  Layout = "_Layout";
+}
+<div class="container w3-display-topmiddle">
+  <header class="jumbotron jumbotron-fluid w3-teal">
+    <div class="container">
+      <h1 class="display-3 w3-middle" align="center"><a href="/">Address Book</a></h1>
+    </div>
+  </header>
+  <br>
+  <div class="w3-container w3-center">
+
     @if (@Model.Count == 0)
     {
       <h3>No <a href="/contacts/new">contacts</a> in your AddressBook yet!</h3>
     }
     @foreach (var contact in Model)
     {
-      <h3><a href="/contacts/@contact.GetId()">@contact.GetName()</a></h3>
+      <div class="inner">
+        <div class="w3-dropdown-hover">
+          <h3><a href="/contacts/@contact.GetId()">@contact.GetName()</a></h3>
+          <div class="w3-dropdown-content" style="width:250px">
+            <img src="https://cdn.pixabay.com/photo/2014/04/03/00/38/house-308936_960_720.png" alt="House" style="width:100%">
+            <div class="w3-container">
+              <p>@contact.GetName()</p>
+              <p>P: @contact.GetPhone()</p>
+              <p>A: @contact.GetAddress()</p>
+            </div>
+          </div>
+        </div>
+      </div>
     }
-
-    <p><a href="/contacts/new">Add a new Contact</a></p>
-    @if (@Model.Count > 0)
-    {
-      <form action="/contacts/List/Clear" method="post">
-        <button type="submt" name="button">Clear All Contacts</button>
-      </form>
-    }
-  </body>
-</html>
+  </div>
+  <br>
+  <footer class="w3-container w3-center w3w3-padding-large">
+    <div class="inner">
+      <h3><a href="/contacts/new">Add a new Contact</a></h3>
+      @if (@Model.Count > 0)
+      {
+        <form action="/contacts/List/Clear" method="post">
+          <button type="submt" name="button">Clear All Contacts</button>
+        </form>
+      }
+    </div>
+  </footer>
+</div>
