--- a/Views/Contacts/CreateForm.cshtml
+++ b/Views/Contacts/CreateForm.cshtml
@@ -51,7 +51,7 @@
       @if (@Model.Count > 0)
       {
         <form action="/contacts/List/Clear" method="post">
-          <button type="submt" name="button">Clear All Contacts</button>
+          <button type="submit" name="button">Clear All Contacts</button>
         </form>
       }
     </div>
